--- a/build.settings
+++ b/build.settings
@@ -10,10 +10,14 @@ settings = {
 	
 	iphone = {
 		plist = {
-			UIStatusBarHidden = false,
+			UIStatusBarHidden = true,
 			UIPrerenderedIcon = true, -- set to false for "shine" overlay
 			--UIApplicationExitsOnSuspend = true, -- uncomment to quit app on suspend
 
+        UIAppFonts =
+        {
+          "Railway.ttf"
+        }
             --[[
             -- iOS app URL schemes:
             CFBundleURLTypes =
